--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "framer-motion": "^10.12.12",
     "gsap": "^3.11.5",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-remove-scroll-bar": "^2.3.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4"
   },
   "devDependencies": {
