--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-remove-scroll-bar": "^2.3.4",
+    "react-use-downloader": "^1.2.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4"
   },
