--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -20,6 +21,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "react-remove-scroll-bar": "^2.3.4",
     "react-use-downloader": "^1.2.4",
     "tailwind-scrollbar-hide": "^1.1.7",
