--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.15",
     "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
