--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_MAILER_USERNAME=youremail@example.com
 NEXT_PUBLIC_MAILER_PASSWORD=yoursecretpassword
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=YOUR_GOOGLE_ANALYTICS_ID
